--- a/sparkyservice-jpa/pom.xml
+++ b/sparkyservice-jpa/pom.xml
@@ -2,8 +2,8 @@
 	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
-	<artifactId>sparkyservice-sql</artifactId>
-	<name>SparkyService-SQL</name>
+	<artifactId>sparkyservice-jpa</artifactId>
+	<name>SparkyService-JPA Mapping</name>
 	<parent>
 		<groupId>net.ssehub.sparkyservice</groupId>
 		<artifactId>sparkyservice-project</artifactId>
