--- a/sparkyservice-api/pom.xml
+++ b/sparkyservice-api/pom.xml
@@ -26,8 +26,6 @@
 		</dependencies>
 	</dependencyManagement>
 	<dependencies>
-		<!-- <dependency> <groupId>net.ssehub.json</groupId> <artifactId>json-parser</artifactId> 
-			<version>1.0</version> </dependency> -->
 		<dependency>
 			<groupId>net.ssehub.sparkyservice</groupId>
 			<artifactId>sparkyservice-jpa</artifactId>
@@ -90,7 +88,7 @@
 			<version>0.10.5</version>
 			<scope>runtime</scope>
 		</dependency>
-		
+
 		<!-- TEST DEPENDENCIES -->
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
@@ -115,6 +113,11 @@
 		<dependency>
 			<groupId>org.junit.jupiter</groupId>
 			<artifactId>junit-jupiter-engine</artifactId>
+			<scope>test</scope>
+		</dependency>
+		<dependency>
+			<groupId>org.springframework.security</groupId>
+			<artifactId>spring-security-test</artifactId>
 			<scope>test</scope>
 		</dependency>
 	</dependencies>
