--- a/sparkyservice-api/pom.xml
+++ b/sparkyservice-api/pom.xml
@@ -13,6 +13,8 @@
 	<properties>
 		<swagger.version>2.9.1</swagger.version>
 		<spring-starter.version>2.2.5.RELEASE</spring-starter.version>
+		<main.class>net.ssehub.sparkyservice.api.SparkyServiceApplication
+		</main.class>
 	</properties>
 	<dependencyManagement>
 		<dependencies>
@@ -120,13 +122,37 @@
 			<artifactId>spring-security-test</artifactId>
 			<scope>test</scope>
 		</dependency>
+		<dependency>
+			<groupId>org.testcontainers</groupId>
+			<artifactId>testcontainers</artifactId>
+			<version>1.13.0</version>
+			<scope>test</scope>
+		</dependency>
+		<dependency>
+			<groupId>org.testcontainers</groupId>
+			<artifactId>postgresql</artifactId>
+			<version>1.13.0</version>
+			<scope>test</scope>
+		</dependency>
+		<dependency>
+			<groupId>org.testcontainers</groupId>
+			<artifactId>junit-jupiter</artifactId>
+			<version>1.13.0</version>
+			<scope>test</scope>
+		</dependency>
 	</dependencies>
 	<build>
 		<plugins>
 			<plugin>
 				<groupId>org.springframework.boot</groupId>
 				<artifactId>spring-boot-maven-plugin</artifactId>
-				<version>${spring-starter.version}</version>
+				<version>2.2.5.RELEASE</version>
+				<configuration>
+					<classifier>spring-boot</classifier>
+					<mainClass>${main.class}</mainClass>
+				</configuration>
+				<!-- <executions> Remove this part in order <execution> <goals> <goal>repackage</goal> 
+					</goals> </execution> </executions> -->
 			</plugin>
 		</plugins>
 	</build>
