--- a/sparkyservice-api/src/test/resources/application-test.properties
+++ b/sparkyservice-api/src/test/resources/application-test.properties
@@ -1,9 +1,9 @@
 # Spring - Database
 spring.datasource.driver-class-name=org.postgresql.Driver
-spring.datasource.url=jdbc:postgresql://10.0.3.105:5432/testdb
-spring.datasource.username=testdb
-spring.datasource.password=testdb
-spring.jpa.show-sql = true
+spring.datasource.url=<automatic>
+spring.datasource.username=<automatic>
+spring.datasource.password=<automatic>
+spring.jpa.show-sql = false
 spring.jpa.hibernate.ddl-auto = create
 	
 # LDAP
