--- a/sparkyservice-jpa/pom.xml
+++ b/sparkyservice-jpa/pom.xml
@@ -18,21 +18,40 @@
 		</dependency>
 		<!-- https://mvnrepository.com/artifact/org.postgresql/postgresql -->
 		<dependency>
-		    <groupId>org.postgresql</groupId>
-		    <artifactId>postgresql</artifactId>
-		    <version>42.2.11</version>
+			<groupId>org.postgresql</groupId>
+			<artifactId>postgresql</artifactId>
+			<version>42.2.11</version>
 		</dependency>
-		<!-- API, java.xml.bind module (necessary for hibernate since Java 9)-->
+		<!-- API, java.xml.bind module (necessary for hibernate since Java 9) -->
 		<dependency>
 			<groupId>jakarta.xml.bind</groupId>
 			<artifactId>jakarta.xml.bind-api</artifactId>
 			<version>2.3.2</version>
 		</dependency>
-		<!-- Runtime, com.sun.xml.bind module (necessary for hibernate since Java 9)-->
+		<!-- Runtime, com.sun.xml.bind module (necessary for hibernate since Java 
+			9) -->
 		<dependency>
 			<groupId>org.glassfish.jaxb</groupId>
 			<artifactId>jaxb-runtime</artifactId>
 			<version>2.3.2</version>
+		</dependency>
+		<dependency>
+			<groupId>org.testcontainers</groupId>
+			<artifactId>testcontainers</artifactId>
+			<version>1.13.0</version>
+			<scope>test</scope>
+		</dependency>
+		<dependency>
+			<groupId>org.testcontainers</groupId>
+			<artifactId>postgresql</artifactId>
+			<version>1.13.0</version>
+			<scope>test</scope>
+		</dependency>
+		<dependency>
+			<groupId>org.testcontainers</groupId>
+			<artifactId>junit-jupiter</artifactId>
+			<version>1.13.0</version>
+			<scope>test</scope>
 		</dependency>
 	</dependencies>
 	<build>
