No dependency on database
Spring will start even if the configured database is not online.

--- a/sparkyservice-api/src/main/resources/application-dev.properties
+++ b/sparkyservice-api/src/main/resources/application-dev.properties
@@ -1,10 +1,13 @@
 # Spring - Database
-spring.datasource.driver-class-name=org.postgresql.Driver
-spring.datasource.url=jdbc:postgresql://10.0.3.105:5432/testdb
-spring.datasource.username=testdb
-spring.datasource.password=testdb
-spring.jpa.show-sql = true
+spring.datasource.driver-class-name = org.postgresql.Driver
+spring.datasource.url = jdbc:postgresql://10.0.3.105:5432/testdb
+spring.datasource.username = testdb
+spring.datasource.password = testdb
+spring.datasource.continueOnError = true
+spring.jpa.database-platform = org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.hibernate.ddl-auto = create
+spring.jpa.properties.show-sql = true
+spring.jpa.properties.connection.pool_size = 5
 	
 # LDAP
 ldap.enabled = true
