Design and format

--- a/sparkyservice-api/src/main/resources/application-dev.properties
+++ b/sparkyservice-api/src/main/resources/application-dev.properties
@@ -5,7 +5,7 @@ spring.datasource.username = testdb
 spring.datasource.password = testdb
 spring.datasource.continueOnError = true
 spring.jpa.database-platform = org.hibernate.dialect.PostgreSQLDialect
-spring.jpa.hibernate.ddl-auto = create
+#spring.jpa.hibernate.ddl-auto = create
 spring.jpa.properties.show-sql = true
 spring.jpa.properties.connection.pool_size = 5
 	
