--- a/sparkyservice-api/pom.xml
+++ b/sparkyservice-api/pom.xml
@@ -9,9 +9,10 @@
 	</parent>
 	<artifactId>sparkyservice-api</artifactId>
 	<name>SparkyService Api</name>
+	<packaging>jar</packaging>
 
 	<properties>
-		<swagger.version>2.9.1</swagger.version>
+		<swagger.version>1.3.0</swagger.version>
 		<spring-starter.version>2.2.5.RELEASE</spring-starter.version>
 		<main.class>net.ssehub.sparkyservice.api.SparkyServiceApplication
 		</main.class>
@@ -52,13 +53,13 @@
 			<artifactId>spring-boot-starter-logging</artifactId>
 		</dependency>
 		<dependency>
-			<groupId>io.springfox</groupId>
-			<artifactId>springfox-swagger2</artifactId>
+			<groupId>org.springdoc</groupId>
+			<artifactId>springdoc-openapi-ui</artifactId>
 			<version>${swagger.version}</version>
 		</dependency>
 		<dependency>
-			<groupId>io.springfox</groupId>
-			<artifactId>springfox-swagger-ui</artifactId>
+			<groupId>org.springdoc</groupId>
+			<artifactId>springdoc-openapi-security</artifactId>
 			<version>${swagger.version}</version>
 		</dependency>
 		<dependency>
@@ -140,6 +141,11 @@
 			<version>1.13.0</version>
 			<scope>test</scope>
 		</dependency>
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-tomcat</artifactId>
+			<scope>provided</scope>
+		</dependency>
 	</dependencies>
 	<build>
 		<plugins>
@@ -147,12 +153,17 @@
 				<groupId>org.springframework.boot</groupId>
 				<artifactId>spring-boot-maven-plugin</artifactId>
 				<version>2.2.5.RELEASE</version>
+				<executions>
+					<execution>
+						<goals>
+							<goal>repackage</goal>
+						</goals>
+					</execution>
+				</executions>
 				<configuration>
 					<classifier>spring-boot</classifier>
 					<mainClass>${main.class}</mainClass>
 				</configuration>
-				<!-- <executions> Remove this part in order <execution> <goals> <goal>repackage</goal> 
-					</goals> </execution> </executions> -->
 			</plugin>
 		</plugins>
 	</build>
