--- a/sparkyservice-api/src/test/resources/application-test.properties
+++ b/sparkyservice-api/src/test/resources/application-test.properties
@@ -6,6 +6,8 @@ spring.datasource.password=<automatic>
 spring.jpa.show-sql = false
 spring.jpa.hibernate.ddl-auto = create
 	
+springdoc.version = 1
+
 # LDAP
 ldap.enabled = true
 ldap.urls= ldap://ldap.forumsys.com:389/
