Log for JwtAuth

--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -6,10 +6,18 @@ spring.datasource.password = testdb
 spring.datasource.continueOnError = true
 spring.jpa.database-platform = org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.hibernate.ddl-auto = create
-spring.jpa.properties.show-sql = true
+spring.jpa.properties.show-sql = false
 spring.jpa.properties.connection.pool_size = 5
 
 springdoc.version = 3
+
+# Logging
+debug=false
+logging.level.root = INFO
+logging.level.org.springframework.web = INFO
+logging.level.org.hibernate = ERROR
+logging.level.net.ssehub.sparkyservice = DEBUG
+logging.level.org.springframework=ERROR
 	
 # LDAP
 ldap.enabled = true
