Active directory alternative authentication provider

--- a/src/test/resources/application-test.properties
+++ b/src/test/resources/application-test.properties
@@ -10,10 +10,12 @@ springdoc.version = 1
 
 # LDAP
 ldap.enabled = true
+ldap.ad = false
 ldap.urls= ldap://ldap.forumsys.com:389/
-ldap.base.dn= dc=example,dc=com
-ldap.username= cn=read-only-admin,dc=example,dc=com
-ldap.password= password
+ldap.base.dn = dc=example,dc=com
+ldap.domain = example.com
+ldap.username = cn=read-only-admin,dc=example,dc=com
+ldap.password = password
 ldap.user.dn.pattern = uid={0}
 
 # JWT
