--- a/src/test/resources/application-test.properties
+++ b/src/test/resources/application-test.properties
@@ -7,6 +7,7 @@ spring.jpa.show-sql = false
 spring.jpa.hibernate.ddl-auto = create
 	
 springdoc.version = 1
+logging.level.net.ssehub.sparkyservice = DEBUG
 
 # LDAP
 ldap.enabled = true
