Routing infrastructure with Zuul

--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -9,6 +9,10 @@ spring.jpa.hibernate.ddl-auto = create
 spring.jpa.properties.show-sql = false
 spring.jpa.properties.connection.pool_size = 5
 
+# Zuul Routing
+#zuul.routes.mgmt.url=http://localhost:8080/api/v0/
+ribbon.eureka.enabled=false
+
 # Logging
 debug=false
 logging.level.root = INFO
