--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -10,7 +10,7 @@ spring.jpa.properties.show-sql = false
 spring.jpa.properties.connection.pool_size = 5
 
 # Zuul Routing
-#zuul.routes.mgmt.url=http://localhost:8080/api/v0/
+zuul.routes.stmgmt.url=http://147.172.178.30:3000
 ribbon.eureka.enabled=false
 
 # Logging
