WIP: Authentication for routing

--- a/src/test/resources/application-test.properties
+++ b/src/test/resources/application-test.properties
@@ -9,6 +9,11 @@ spring.jpa.hibernate.ddl-auto = create
 springdoc.version = 1
 logging.level.net.ssehub.sparkyservice = DEBUG
 
+# Zuul Routing
+zuul.routes.stmgmt.url=http://147.172.178.30:3000
+zuul.routes.stmgmt.protectedBy = none
+ribbon.eureka.enabled=false
+
 # LDAP
 ldap.enabled = true
 ldap.ad = false
