Nested configuration classes

--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -11,6 +11,7 @@ spring.jpa.properties.connection.pool_size = 5
 
 # Zuul Routing
 zuul.routes.stmgmt.url=http://147.172.178.30:3000
+zuul.routes.stmgmt.protectedBy = none
 ribbon.eureka.enabled=false
 
 # Logging
@@ -33,13 +34,12 @@ ldap.user.dn.pattern = uid={0}
 
 # JWT
 jwt.secret = k3l2j4ljsy89/()213kjlA?#DAS"§31fdskj23&$%$(jkdasjldkj329)))jdskajf
-jwt.token.header = Authorization
-jwt.token.prefix = Bearer
-jwt.token.type = JWT
-jwt.token.issuer = sparkyservice-api
-jwt.token.audience = sparkyservice-app
+jwt.header = Authorization
+jwt.prefix = Bearer
+jwt.type = JWT
+jwt.issuer = sparkyservice-api
+jwt.audience = sparkyservice-app
 
 # inMemory
 recovery.enabled = true
 recovery.password = abcdefgh
-recovery.user = user
