--- a/src/test/resources/application-test.properties
+++ b/src/test/resources/application-test.properties
@@ -26,11 +26,11 @@ ldap.user.dn.pattern = uid={0}
 
 # JWT
 jwt.secret = k3l2j4ljsy89/()213kjlA?#DAS"§31fdskj23&$%$(jkdasjldkj329)))jdskajf
-jwt.token.header = Authorization
-jwt.token.prefix = Bearer
-jwt.token.type = JWT
-jwt.token.issuer = sparkyservice-api
-jwt.token.audience = sparkyservice-app
+jwt.header = Authorization
+jwt.prefix = Bearer
+jwt.type = JWT
+jwt.issuer = sparkyservice-api
+jwt.audience = sparkyservice-app
 
 # inMemory
 recovery.enabled = true
