--- a/src/test/resources/application-test.properties
+++ b/src/test/resources/application-test.properties
@@ -1,19 +1,12 @@
 # Spring - Database
 spring.datasource.driver-class-name=org.postgresql.Driver
+spring.jpa.database-platform = org.hibernate.dialect.PostgreSQLDialect
 spring.datasource.url=<automatic>
 spring.datasource.username=<automatic>
 spring.datasource.password=<automatic>
 spring.jpa.show-sql = false
 spring.jpa.hibernate.ddl-auto = create
 	
-springdoc.version = 1
-logging.level.net.ssehub.sparkyservice = DEBUG
-
-# Zuul Routing
-zuul.routes.stmgmt.url=http://147.172.178.30:3000
-zuul.routes.stmgmt.protectedBy = none
-ribbon.eureka.enabled=false
-
 # LDAP
 ldap.enabled = true
 ldap.ad = false
