Fix and refactor zuul filter

--- a/src/test/resources/test-routing.properties
+++ b/src/test/resources/test-routing.properties
@@ -6,10 +6,10 @@
 # Zuul Routing
 zuul.routes.testroutefree.url = forward:/api/v0/heartbeat
 zuul.routes.testroutefree.protectedBy = none
-zuul.routes.testroutesecure.url = /api/v0/heartbeat
+zuul.routes.testroutesecure.url = forward:/api/v0/heartbeat
 zuul.routes.testroutesecure.protectedBy = user@memory
 zuul.routes.testroutesecure2.url = forward:/api/v0/heartbeat
-zuul.routes.testroutesecure2.protectedBy = user1@memory, user2@memory
+zuul.routes.testroutesecure2.protectedBy = user1@memory,user2@memory
 ribbon.eureka.enabled=false
 
 # JWT
