Debug and cleanup

--- a/src/test/resources/test-routing.properties
+++ b/src/test/resources/test-routing.properties
@@ -6,7 +6,7 @@
 # Zuul Routing
 zuul.routes.testroutefree.url = forward:/api/v0/heartbeat
 zuul.routes.testroutefree.protectedBy = none
-zuul.routes.testroutesecure.url = forward:/api/v0/heartbeat
+zuul.routes.testroutesecure.url = forward:/api/v0/**
 zuul.routes.testroutesecure.protectedBy = user@memory
 zuul.routes.testroutesecure2.url = forward:/api/v0/heartbeat
 zuul.routes.testroutesecure2.protectedBy = user1@memory,user2@memory
@@ -17,13 +17,8 @@ jwt.secret = k3l2j4ljsy89/()213kjlA?#DAS"§31fdskj23&$%$(jkdasjldkj329)))jdskajf
 jwt.header = Authorization
 jwt.prefix = Bearer
 jwt.type = JWT
-jwt.issuer = sparkyservice-api
+jwt.issuer = test-routing
 jwt.audience = sparkyservice-app
-
-# inMemory
-recovery.enabled = true
-recovery.password = abcdefgh
-recovery.user = user
 
 # Other
 springdoc.version = 1
