Rename test property file

--- a/src/test/resources/test.properties
+++ b/src/test/resources/test.properties
@@ -6,7 +6,8 @@ spring.datasource.username=<automatic>
 spring.datasource.password=<automatic>
 spring.jpa.show-sql = false
 spring.jpa.hibernate.ddl-auto = create
-	
+
+
 # LDAP
 ldap.enabled = true
 ldap.ad = false
@@ -22,7 +23,7 @@ jwt.secret = k3l2j4ljsy89/()213kjlA?#DAS"§31fdskj23&$%$(jkdasjldkj329)))jdskajf
 jwt.header = Authorization
 jwt.prefix = Bearer
 jwt.type = JWT
-jwt.issuer = sparkyservice-api
+jwt.issuer = generel-tests
 jwt.audience = sparkyservice-app
 
 # inMemory
