--- a/src/test/resources/test.properties
+++ b/src/test/resources/test.properties
@@ -7,6 +7,14 @@ spring.datasource.password=<automatic>
 spring.jpa.show-sql = false
 spring.jpa.hibernate.ddl-auto = create
 
+# Zuul Routing
+zuul.routes.testroutefree.url = forward:/api/v0/heartbeat
+zuul.routes.testroutefree.protectedBy = none
+zuul.routes.testroutesecure.url = forward:/api/v0/**
+zuul.routes.testroutesecure.protectedBy = user@memory
+zuul.routes.testroutesecure2.url = forward:/api/v0/heartbeat
+zuul.routes.testroutesecure2.protectedBy = user1@memory,user2@memory
+ribbon.eureka.enabled=false
 
 # LDAP
 ldap.enabled = true
