--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -10,8 +10,10 @@ spring.jpa.properties.show-sql = false
 spring.jpa.properties.connection.pool_size = 5
 
 # Zuul Routing
+zuul.routes.heart.url = forward:/api/v0/heartbeat
+zuul.routes.heart.protectedBy = none
 zuul.routes.stmgmt.url=http://147.172.178.30:3000
-zuul.routes.stmgmt.protectedBy = none
+zuul.routes.stmgmt.protectedBy = gauss@LDAP,user@MEMORY
 ribbon.eureka.enabled=false
 
 # Logging
