--- a/pom.xml
+++ b/pom.xml
@@ -223,20 +223,19 @@
 				</executions>
 			</plugin>
 			<plugin>
-				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-checkstyle-plugin</artifactId>
-				<version>2.17</version>
+				<version>3.1.1</version>
 				<configuration>
 					<configLocation>checkstyle.xml</configLocation>
 					<encoding>UTF-8</encoding>
-					<consoleOutput>true</consoleOutput>
-					<failsOnError>true</failsOnError>
-					<linkXRef>false</linkXRef>
+					<failOnViolation>false</failOnViolation>
+					<includeResources>false</includeResources>
+					<includeTestResources>false</includeTestResources>
+					<includeTestSourceDirectory>false</includeTestSourceDirectory>
 				</configuration>
-
 				<executions>
 					<execution>
-						<id>validate</id>
+						<id>checkstyle</id>
 						<phase>validate</phase>
 						<goals>
 							<goal>check</goal>
