Make locking of specific JWT token possible

--- a/src/test/resources/test-routing.properties
+++ b/src/test/resources/test-routing.properties
@@ -7,9 +7,9 @@
 zuul.routes.testroutefree.url = forward:/api/v0/heartbeat
 zuul.routes.testroutefree.protectedBy = none
 zuul.routes.testroutesecure.url = forward:/api/v0/**
-zuul.routes.testroutesecure.protectedBy = user@memory
+zuul.routes.testroutesecure.protectedBy = user@LOCAL
 zuul.routes.testroutesecure2.url = forward:/api/v0/heartbeat
-zuul.routes.testroutesecure2.protectedBy = user1@memory,user2@memory
+zuul.routes.testroutesecure2.protectedBy = user1@LOCAL,user2@LOCAL,service@LOCAL
 ribbon.eureka.enabled=false
 
 # JWT
