--- a/src/test/resources/test.properties
+++ b/src/test/resources/test.properties
@@ -1,3 +1,4 @@
+
 # Spring - Database
 spring.datasource.driver-class-name=org.postgresql.Driver
 spring.jpa.database-platform = org.hibernate.dialect.PostgreSQLDialect
@@ -13,7 +14,7 @@ zuul.routes.testroutefree.protectedBy = none
 zuul.routes.testroutesecure.url = forward:/api/v0/**
 zuul.routes.testroutesecure.protectedBy = user@memory
 zuul.routes.testroutesecure2.url = forward:/api/v0/heartbeat
-zuul.routes.testroutesecure2.protectedBy = user1@memory,user2@memory
+zuul.routes.testroutesecure2.protectedBy = service@LOCAL,user2@memory
 ribbon.eureka.enabled=false
 
 # LDAP
