--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,7 @@
 	<artifactId>sparkyservice-api</artifactId>
 	<groupId>net.ssehub.sparkyservice.api</groupId>
 	<name>SparkyService API</name>
-	<version>1.0.0</version>
+	<version>1.0.0.SNAPSHOT</version>
 	<packaging>jar</packaging>
 
 	<properties>
