--- a/src/test/resources/test-routing.properties
+++ b/src/test/resources/test-routing.properties
@@ -5,11 +5,11 @@
 
 # Zuul Routing
 zuul.routes.testroutefree.url = forward:/api/v0/heartbeat
-zuul.routes.testroutefree.protectedBy = none
+zuul.routes.testroutefree.acl = none
 zuul.routes.testroutesecure.url = forward:/api/v0/**
-zuul.routes.testroutesecure.protectedBy = user@LOCAL
+zuul.routes.testroutesecure.acl = user@LOCAL
 zuul.routes.testroutesecure2.url = forward:/api/v0/heartbeat
-zuul.routes.testroutesecure2.protectedBy = user1@LOCAL,user2@LOCAL,service@LOCAL
+zuul.routes.testroutesecure2.acl = user1@LOCAL,user2@LOCAL,service@LOCAL
 ribbon.eureka.enabled=false
 
 # JWT
