--- a/src/test/resources/test.properties
+++ b/src/test/resources/test.properties
@@ -10,11 +10,11 @@ spring.jpa.hibernate.ddl-auto = create
 
 # Zuul Routing
 zuul.routes.testroutefree.url = forward:/api/v0/heartbeat
-zuul.routes.testroutefree.protectedBy = none
+zuul.routes.testroutefree.acl = none
 zuul.routes.testroutesecure.url = forward:/api/v0/**
-zuul.routes.testroutesecure.protectedBy = user@memory
+zuul.routes.testroutesecure.acl = user@memory
 zuul.routes.testroutesecure2.url = forward:/api/v0/heartbeat
-zuul.routes.testroutesecure2.protectedBy = service@LOCAL,user2@memory
+zuul.routes.testroutesecure2.acl = service@LOCAL,user2@memory
 ribbon.eureka.enabled=false
 
 # LDAP
