--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,7 @@
 spring.profiles.active=release
-springdoc.version = 1.0
+# Todo remove patch version here
+springdoc.version = ${pom.version} 
 spring.banner.location=classpath:banner.txt
+logging.level.com.zaxxer.hikari = OFF
+version=${pom.version}
+build.date=${timestamp}
