--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -1,3 +1,11 @@
+
+server.port=8888
+#server.ssl.key-store-type=PKCS12
+#server.ssl.key-store=classpath:keystore.p12
+#server.ssl.key-store-password=password
+#server.ssl.key-alias=tomcat
+#security.require-ssl=true
+
 # Spring - Database
 spring.datasource.driver-class-name = org.postgresql.Driver
 spring.datasource.url = jdbc:postgresql://10.0.3.105:5432/testdb
@@ -11,28 +19,38 @@ spring.jpa.properties.connection.pool_size = 5
 
 # Zuul Routing
 zuul.routes.heart.url = forward:/api/v0/heartbeat
-zuul.routes.heart.protectedBy = none
-zuul.routes.stmgmt.url=http://147.172.178.30:3000
-zuul.routes.stmgmt.protectedBy = gauss@LDAP,user@MEMORY
+zuul.routes.heart.acl = none
+zuul.routes.stmgmt.url=http://147.172.178.138:3000
+#zuul.routes.stmgmt.acl = gauss@LDAP,user@MEMORY
 ribbon.eureka.enabled=false
 
 # Logging
-debug=false
+debug=true
 logging.level.root = INFO
-logging.level.org.springframework.web = INFO
+logging.level.org.springframework.web = WARN
 logging.level.org.hibernate = ERROR
 logging.level.net.ssehub.sparkyservice = DEBUG
 logging.level.org.springframework=ERROR
 	
-# LDAP
+## LDAP
+#ldap.enabled = true
+#ldap.ad = false
+#ldap.urls= ldap://ldap.forumsys.com:389/
+#ldap.base.dn = dc=example,dc=com
+#ldap.domain = example.com
+#ldap.username = cn=read-only-admin,dc=example,dc=com
+#ldap.password = password
+#ldap.user.dn.pattern = uid={0}
+
 ldap.enabled = true
-ldap.ad = false
-ldap.urls= ldap://ldap.forumsys.com:389/
-ldap.base.dn = dc=example,dc=com
-ldap.domain = example.com
-ldap.username = cn=read-only-admin,dc=example,dc=com
-ldap.password = password
-ldap.user.dn.pattern = uid={0}
+ldap.ad = true		
+ldap.domain = pcds.uni-hildesheim.de
+ldap.urls = ldap://localhost:4564/
+ldap.base.dn = ou=*
+ldap.username =
+ldap.password = 
+ldap.user.dn.pattern =
+
 
 # JWT
 jwt.secret = k3l2j4ljsy89/()213kjlA?#DAS"§31fdskj23&$%$(jkdasjldkj329)))jdskajf
