--- a/pom.xml
+++ b/pom.xml
@@ -10,6 +10,7 @@
 
 	<properties>
 		<swagger.version>1.3.0</swagger.version>
+		<testcontainers.version>1.15.1</testcontainers.version>
 		<spring-starter.version>2.2.5.RELEASE</spring-starter.version>
 		<main.class>net.ssehub.sparkyservice.api.SparkyServiceApplication</main.class>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
@@ -174,19 +175,19 @@
 		<dependency>
 			<groupId>org.testcontainers</groupId>
 			<artifactId>testcontainers</artifactId>
-			<version>1.13.0</version>
+			<version>${testcontainers.version}</version>
 			<scope>test</scope>
 		</dependency>
 		<dependency>
 			<groupId>org.testcontainers</groupId>
 			<artifactId>postgresql</artifactId>
-			<version>1.13.0</version>
+			<version>${testcontainers.version}</version>
 			<scope>test</scope>
 		</dependency>
 		<dependency>
 			<groupId>org.testcontainers</groupId>
 			<artifactId>junit-jupiter</artifactId>
-			<version>1.13.0</version>
+			<version>${testcontainers.version}</version>
 			<scope>test</scope>
 		</dependency>
 		<dependency>
