Bugfix, esthetic changes and additional username validation

--- a/src/test/resources/test-routing.properties
+++ b/src/test/resources/test-routing.properties
@@ -1,7 +1,7 @@
 # Spring - Database
-#spring.datasource.driver-class-name=org.postgresql.Driver
-#spring.jpa.database-platform = org.hibernate.dialect.PostgreSQLDialect
-#spring.jpa.hibernate.ddl-auto = update
+spring.datasource.driver-class-name=org.postgresql.Driver
+spring.jpa.database-platform = org.hibernate.dialect.PostgreSQLDialect
+spring.jpa.hibernate.ddl-auto = create
 
 # Zuul Routing
 zuul.routes.testroutefree.url = forward:/api/v1/heartbeat
