test: remove missleading error messages
The wrong messages in test cases appear only in eclipse and not in maven

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -64,11 +64,12 @@ logging:
       org:
          springframework:
             web: WARN
+            boot:
+               autoconfigure: ERROR
          hibernate: ERROR
       net:
          ssehub:
             sparkyservice: DEBUG
- 
 ---
 spring:
    profiles: dbsetup
