Fix: disable db migrations in tests

--- a/src/test/resources/application.yml
+++ b/src/test/resources/application.yml
@@ -8,3 +8,7 @@ loggin:
 zuul:
     ignored-headers: Access-Control-Allow-Credentials, Access-Control-Allow-Origin
     sensitive-headers: Cookie,Set-Cookie
+
+spring:
+   flyway:
+      enabled: false
