--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,7 @@
 	<artifactId>sparkyservice-api</artifactId>
 	<groupId>net.ssehub.sparkyservice.api</groupId>
 	<name>SparkyService API</name>
-	<version>2.0.0</version>
+	<version>2.0.0-SNAPSHOT</version>
 	<packaging>jar</packaging>
 
 	<properties>
@@ -204,7 +204,7 @@
 			</plugin>
 			<plugin>
 				<artifactId>maven-failsafe-plugin</artifactId>
-				<version>3.0.0-M5</version>
+				<version>2.22.1</version>
 				<executions>
 					<execution>
 						<goals>
