--- a/src/test/resources/test-routing.properties
+++ b/src/test/resources/test-routing.properties
@@ -1,9 +1,9 @@
 zuul.routes.testroutefree.url = forward:/api/v1/heartbeat
 
 zuul.routes.testroutesecure.url = forward:/api/v1/**
-zuul.routes.testroutesecure.acl = user@esb
+zuul.routes.testroutesecure.acl = user@local
 
 zuul.routes.testroutesecure2.url = forward:/api/v1/heartbeat
-zuul.routes.testroutesecure2.acl = user1@ESB,user2@ESB,service@esb
+zuul.routes.testroutesecure2.acl = user1@local,user2@e-learning,service@local
 zuul.routes.authvalidation.url = http://127.0.0.1:1080/authvalidation
 ribbon.eureka.enabled = false
